Add aws region to Github actions spec file

--- a/.github/workflows/build-deploy-spec.yml
+++ b/.github/workflows/build-deploy-spec.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: None
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
