--- a/.github/workflows/build-deploy-spec.yml
+++ b/.github/workflows/build-deploy-spec.yml
@@ -30,11 +30,11 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: None
+          aws-region: us-west-2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo 'AWS credentials configured successfully'
+        run: echo ${{ secrets.AWS_ACCESS_KEY_ID }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
